<resources>
    <string name="app_name">Submission3_MyGithubApp</string>
    <string name="App">Github User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="avatar">Avatar</string>
    <string name="username">Username</string>
    <string name="search">search</string>
    <string name="followers">Followers</string>
    <string name="dot">dot</string>
    <string name="following">Following</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="favorite">favorite</string>
</resources>