<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailActivity">

    <ImageView
        android:id="@+id/dtl_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/dtl_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/dtl_avatar"
        app:layout_constraintStart_toEndOf="@+id/dtl_avatar"
        app:layout_constraintTop_toTopOf="@+id/dtl_avatar" />

    <ImageView
        android:id="@+id/dtl_iconPeople"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/search"
        app:layout_constraintStart_toStartOf="@+id/dtl_avatar"
        app:layout_constraintTop_toBottomOf="@+id/dtl_avatar"
        app:srcCompat="@drawable/ic_people" />

    <TextView
        android:id="@+id/dtl_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/dtl_iconPeople"
        app:layout_constraintStart_toEndOf="@+id/dtl_iconPeople"
        app:layout_constraintTop_toTopOf="@+id/dtl_iconPeople" />

    <ImageView
        android:id="@+id/dtl_dot"
        android:layout_width="6dp"
        android:layout_height="6dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/dot"
        app:layout_constraintBottom_toBottomOf="@+id/dtl_followers"
        app:layout_constraintStart_toEndOf="@+id/dtl_followers"
        app:layout_constraintTop_toTopOf="@+id/dtl_followers"
        app:srcCompat="@drawable/ic_dot" />

    <TextView
        android:id="@+id/dtl_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/dtl_dot"
        app:layout_constraintStart_toEndOf="@+id/dtl_dot"
        app:layout_constraintTop_toTopOf="@+id/dtl_dot" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/dtl_iconPeople"
        app:layout_constraintTop_toBottomOf="@+id/dtl_iconPeople"
        app:srcCompat="@drawable/ic_repository" />

    <TextView
        android:id="@+id/dtl_repo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Repository"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/red2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:tabTextColor="@color/black" />


    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <ImageButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/favorite"
        android:minWidth="40dp"
        android:minHeight="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/dtl_repo"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_favorite" />


</androidx.constraintlayout.widget.ConstraintLayout>